30062025/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: elevy99927/color:blue
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  type: ClusterIP
  selector:
    app: bear 
  ports:          
  - name: http    
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    deploy: green
  name: green-svc
spec:
  ports:          
  - name: http    
    protocol: TCP
    port: 80
    targetPort: 80
