30062025/ingress-canary-header.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress-canary-header
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yellow
            port:
              number: 80
